appId: org.sunbird.app
---
- launchApp:
    clearState: true

- waitForAnimationToEnd

# - runFlow:
#     when:
#       notVisible: "Hi User 1"
#     commands:
#       - runFlow: login.yaml

- tapOn: "Explore"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "Video"
- tapOn: "Close"
- runFlow:
    when:
      visible: "test video content Video test video content Video"
    commands:
      - tapOn: "test video content Video test video content Video"
      - assertVisible: "test video content"
- tapOn: "Back"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "Video"
- tapOn: "Audio"
- tapOn: "Close"
- runFlow:
    when:
      - assertVisible: "No content found"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "Audio"
- tapOn: "PDF"
- tapOn: "Close"
- runFlow:
    when:
      visible: "test Content PDF test Content PDF"
    commands:
      - tapOn: "test Content PDF test Content PDF"
      - assertVisible: "test Content"
- tapOn: "Back"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "PDF"
- tapOn: "Epub"
- tapOn: "Close"
- runFlow:
    when:
      visible: "EPUB-testing EPUB EPUB-testing EPUB"
    commands:
      - tapOn: "EPUB-testing EPUB EPUB-testing EPUB"
      - assertVisible: "EPUB-testing"
- tapOn: "Back"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "Epub"
- tapOn: "Youtube"
- tapOn: "Close"
- runFlow:
    when:
      visible: "Youtube Content Video Youtube Content Video"
    commands:
      - tapOn: "Youtube Content Video Youtube Content Video"
      - assertVisible: "Youtube Content"
- tapOn: "Back"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "Youtube"
- tapOn: "HTML"
- tapOn: "Close"
- runFlow:
    when:
      visible: "HTML Content HTML HTML Content HTML"
    commands:
      - tapOn: "HTML Content HTML HTML Content HTML"
      - assertVisible: "HTML Content"
- tapOn: "Back"

- tapOn: "Filters"
- tapOn: "ContentTypes"
- tapOn: "HTML"
- tapOn: "Interactive"
- tapOn: "Close"
- runFlow:
    when:
      visible: "ca-2 ECML ca-2 ECML"
    commands:
      - tapOn: "ca-2 ECML ca-2 ECML"
      - assertVisible: "ca-2"
- tapOn: "Back"
